--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://api.fontshare.com/v2/css?f[]=poppins@400&f[]=supreme@500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/header.css">
 </head>
 
 <body>
-    <div class="main">
+    <main class="main" data-tilt data-tilt-scale="1.05" data-tilt-max="5" data-tilt-glare="true" data-tilt-max-glare="0.5">
         <header class="header">
             <img src="/assets/img/1708446492102-modified.png" alt="Matheus Da Rosa Costa profile photo" class="photo">
-
             <h1 class="title">Olá, sou Matheus Da Rosa Costa</h1>
-
             <div class="datas">
-                <p>Desempregado</p>
-                <p>Santa Catarina - BR</p>
-                <p>matheusdarosacosta@outlook.com</p>
+                <p class="job">Desempregado</p>
+                <p class="location">Santa Catarina - BR</p>
+                <p class="email">matheusdarosacosta@outlook.com</p>
             </div>
         </header>
-    </div>
+    </main>
+    <script src="assets/js/vanilla-tilt.js"></script>
 </body>
 
 </html>
