--- a/index.html
+++ b/index.html
@@ -8,24 +8,86 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://api.fontshare.com/v2/css?f[]=poppins@400&f[]=supreme@500&display=swap" rel="stylesheet"> 
+    <link href="https://api.fontshare.com/v2/css?f[]=poppins@400&f[]=supreme@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/acordeon.css">
+    <link rel="stylesheet" href="/assets/css/portfolio.css">
+    <link rel="stylesheet" href="assets/css/languages.css">
 </head>
 
 <body>
-    <main class="main" data-tilt data-tilt-scale="1.05" data-tilt-max="5" data-tilt-glare="true" data-tilt-max-glare="0.5">
+    <main class="main" data-tilt data-tilt-scale="1.005" data-tilt-max="1" data-tilt-glare="true"
+        data-tilt-max-glare="0.1">
         <header class="header">
             <img src="/assets/img/1708446492102-modified.png" alt="Matheus Da Rosa Costa profile photo" class="photo">
-            <h1 class="title">Olá, sou Matheus Da Rosa Costa</h1>
+            <h1 class="title" >Olá, eu sou Matheus Da Rosa Costa</h1>
             <div class="datas">
                 <p class="job">Desempregado</p>
                 <p class="location">Santa Catarina - BR</p>
                 <p class="email">matheusdarosacosta@outlook.com</p>
             </div>
         </header>
-    </main>
-    <script src="assets/js/vanilla-tilt.js"></script>
+
+        <section class="wrapper">
+            <div>
+                <div class="container">
+                    <input type="radio" name="slide" id="c1">
+                    <label for="c1" class="card">
+                        <div class="row">
+                            <div class="icon"><img src="assets/img/icons/gitanimal.svg" height="30rem" alt="Animal duvidoso do Github"></div>
+                            <div class="description">
+                                <h3>Portfólio</h3>
+
+                                <ul class="portfolio">
+                                    <li>
+                                        <span class="title github">Pokedex</span>
+                                        <a href="https://github.com/Matheus-D-R-Costa/Pokedex" target="_blank">https://github.com/Matheus-D-R-Costa/Pokedex</a>
+                                    </li>
+                                </ul>
+                                <p></p>
+                            </div>
+                        </div>
+                    </label>
+                    <input type="radio" name="slide" id="c2">
+                    <label for="c2" class="card">
+                        <div class="row">
+                            <div class="icon">2</div>
+                            <div class="description">
+                                <h3>Skills</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias illo consequatur sapiente cumque architecto commodi est placeat adipisci sed at doloremque, provident ex nesciunt. Tempore laborum voluptates soluta fugit ipsum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus eaque non ipsum ut natus cumque hic, iste, vel nisi et quisquam consequatur exercitationem nobis ratione modi commodi enim incidunt? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, numquam! Placeat autem voluptas doloremque, at enim, fuga explicabo blanditiis optio quas beatae veniam ipsam deleniti, eos pariatur ipsa saepe iure! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, provident, voluptatibus ducimus, corporis totam quidem sit mollitia ipsa cum iste accusamus obcaecati molestias temporibus. Incidunt voluptates cupiditate molestias quas dolores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus voluptates, praesentium quae sunt commodi quibusdam suscipit vitae expedita, tenetur sequi aliquid qui distinctio esse, exercitationem accusamus eaque cum aperiam id? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis laboriosam dolores totam itaque aliquid exercitationem recusandae accusamus quaerat esse quo odio porro deleniti, nisi illum autem natus rem maiores ipsa.</p>
+                            </div>
+                        </div>
+                    </label>
+                    <input type="radio" name="slide" id="c3">
+                    <label for="c3" class="card">
+                        <div class="row">
+                            <div class="icon"><img src="assets/img/icons/book.svg" height="30rem" alt="A book"></div>
+                            <div class="description">
+                                <h3>Idiomas</h3>
+
+                                <ul class="languages">
+                                    <li>Português</li>
+                                    <li>Inglês</li>
+                                </ul>
+                                <p></p>
+                            </div>
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </section>
+        <script src="assets/js/vanilla-tilt.js"></script>
 </body>
 
 </html>
+
+<!-- <button class="trigger">
+                <span class="title">Idiomas</span>
+            </button>
+                <div class="content">
+                    <ul>
+                        <li>Português</li>
+                        <li>Inglês</li>
+                    </ul>
+                </div> -->
