atualização 2.0, prokjeto em andamento

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link href="https://api.fontshare.com/v2/css?f[]=poppins@400&f[]=supreme@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/header.css">
-    <link rel="stylesheet" href="/assets/css/acordeon.css">
+    <link rel="stylesheet" href="/assets/css/cards.css">
     <link rel="stylesheet" href="/assets/css/portfolio.css">
+    <link rel="stylesheet" href="/assets/css/skills.css">
     <link rel="stylesheet" href="assets/css/languages.css">
 </head>
 
@@ -21,11 +22,13 @@
         data-tilt-max-glare="0.1">
         <header class="header">
             <img src="/assets/img/1708446492102-modified.png" alt="Matheus Da Rosa Costa profile photo" class="photo">
-            <h1 class="title" >Olá, eu sou Matheus Da Rosa Costa</h1>
+            <h1 class="title">Olá, eu sou Matheus Da Rosa Costa</h1>
             <div class="datas">
-                <p class="job">Desempregado</p>
+                <p class="job"><a href="https://www.linkedin.com/in/matheus-d-r-costa/" target="_blank">Estudante</a>
+                </p>
                 <p class="location">Santa Catarina - BR</p>
-                <p class="email">matheusdarosacosta@outlook.com</p>
+                <p class="email"><a href="" mailto:matheusdarosacosta@outlook.com"
+                        target="_blank">matheusdarosacosta@outlook.com</a></p>
             </div>
         </header>
 
@@ -35,14 +38,16 @@
                     <input type="radio" name="slide" id="c1">
                     <label for="c1" class="card">
                         <div class="row">
-                            <div class="icon"><img src="assets/img/icons/gitanimal.svg" height="30rem" alt="Animal duvidoso do Github"></div>
+                            <div class="icon"><img src="assets/img/icons/gitanimal.svg" height="30rem"
+                                    alt="Animal duvidoso do Github"></div>
                             <div class="description">
                                 <h3>Portfólio</h3>
 
                                 <ul class="portfolio">
                                     <li>
                                         <span class="title github">Pokedex</span>
-                                        <a href="https://github.com/Matheus-D-R-Costa/Pokedex" target="_blank">https://github.com/Matheus-D-R-Costa/Pokedex</a>
+                                        <a href="https://github.com/Matheus-D-R-Costa/Pokedex"
+                                            target="_blank">https://github.com/Matheus-D-R-Costa/Pokedex</a>
                                     </li>
                                 </ul>
                                 <p></p>
@@ -52,10 +57,32 @@
                     <input type="radio" name="slide" id="c2">
                     <label for="c2" class="card">
                         <div class="row">
-                            <div class="icon">2</div>
+                            <div class="icon"><img src="assets/img/icons/skills.svg" height="30rem alt=" Karate kid">
+                            </div>
                             <div class="description">
-                                <h3>Skills</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias illo consequatur sapiente cumque architecto commodi est placeat adipisci sed at doloremque, provident ex nesciunt. Tempore laborum voluptates soluta fugit ipsum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus eaque non ipsum ut natus cumque hic, iste, vel nisi et quisquam consequatur exercitationem nobis ratione modi commodi enim incidunt? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, numquam! Placeat autem voluptas doloremque, at enim, fuga explicabo blanditiis optio quas beatae veniam ipsam deleniti, eos pariatur ipsa saepe iure! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, provident, voluptatibus ducimus, corporis totam quidem sit mollitia ipsa cum iste accusamus obcaecati molestias temporibus. Incidunt voluptates cupiditate molestias quas dolores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus voluptates, praesentium quae sunt commodi quibusdam suscipit vitae expedita, tenetur sequi aliquid qui distinctio esse, exercitationem accusamus eaque cum aperiam id? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis laboriosam dolores totam itaque aliquid exercitationem recusandae accusamus quaerat esse quo odio porro deleniti, nisi illum autem natus rem maiores ipsa.</p>
+                                <h3>Habilidades</h3>
+                                <div class="content">
+                                    <div class="skills">
+                                        <section class="tools">
+                                            <h4>Ferramentas:</h4>
+                                            <ul>
+                                                <li><img src="assets/img/skills/html.svg" alt="HTML 5"></li>
+                                                <li><img src="assets/img/skills/css.svg" alt="CSS 3"></li>
+                                                <li><img src="assets/img/skills/javascript.svg" alt="Javascript"></li>
+                                            </ul>
+                                        </section>
+
+                                        <section class="profissional">
+                                            <h4>Pessoais:</h4>
+                                            <ul>
+                                                <li>Liderança</li>
+                                                <li>Resolução de problemas</li>
+                                                <li>Organização</li>
+                                                <li>Trabalho em equipe</li>
+                                            </ul>
+                                        </section>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </label>
@@ -67,8 +94,8 @@
                                 <h3>Idiomas</h3>
 
                                 <ul class="languages">
-                                    <li>Português</li>
-                                    <li>Inglês</li>
+                                    <li>Português (Fluente)</li>
+                                    <li>Inglês (Intermediário)</li>
                                 </ul>
                                 <p></p>
                             </div>
@@ -81,13 +108,3 @@
 </body>
 
 </html>
-
-<!-- <button class="trigger">
-                <span class="title">Idiomas</span>
-            </button>
-                <div class="content">
-                    <ul>
-                        <li>Português</li>
-                        <li>Inglês</li>
-                    </ul>
-                </div> -->
