--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
             </div>
         </section>
         <script src="assets/js/vanilla-tilt.js"></script>
+        <script src="assets/js/api.js"></script>
+        <script src="assets/js/main.js"></script>
 </body>
 
 </html>
