update header datas

--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
 <body>
     <main class="main" data-tilt data-tilt-scale="1.005" data-tilt-max="1" data-tilt-glare="true"
         data-tilt-max-glare="0.1">
+
         <header class="header">
-            <img src="/assets/img/1708446492102-modified.png" alt="Matheus Da Rosa Costa profile photo" class="photo">
-            <h1 class="title">Olá, eu sou Matheus Da Rosa Costa</h1>
+            <img src="/assets/img/1708446492102-modified.png" alt="profile.photo" class="photo" id="profile.photo">
+            <h1 class="title">Olá, eu sou <span id="profile.name">Loading...</span></h1>
             <div class="datas">
-                <p class="job"><a href="https://www.linkedin.com/in/matheus-d-r-costa/" target="_blank">Estudante</a>
-                </p>
-                <p class="location">Santa Catarina - BR</p>
-                <p class="email"><a href="" mailto:matheusdarosacosta@outlook.com"
-                        target="_blank">matheusdarosacosta@outlook.com</a></p>
+                <p class="job"><a href="https://www.linkedin.com/in/matheus-d-r-costa/" target="_blank" id="profile.job">Loading...</a></p>
+                <p class="location" id="profile.location">Loading...</p>
+                <p class="email"><a href="" mailto:matheusdarosacosta@outlook.com" target="_blank" id="profile.email">Loading...</a></p>
             </div>
         </header>
-
         <section class="wrapper">
             <div>
                 <div class="container">
@@ -42,12 +40,10 @@
                                     alt="Animal duvidoso do Github"></div>
                             <div class="description">
                                 <h3>Portfólio</h3>
-
                                 <ul class="portfolio">
                                     <li>
                                         <span class="title github">Pokedex</span>
-                                        <a href="https://github.com/Matheus-D-R-Costa/Pokedex"
-                                            target="_blank">https://github.com/Matheus-D-R-Costa/Pokedex</a>
+                                        <a href="https://github.com/Matheus-D-R-Costa/Pokedex" target="_blank">https://github.com/Matheus-D-R-Costa/Pokedex</a>
                                     </li>
                                 </ul>
                                 <p></p>
@@ -92,7 +88,6 @@
                             <div class="icon"><img src="assets/img/icons/book.svg" height="30rem" alt="A book"></div>
                             <div class="description">
                                 <h3>Idiomas</h3>
-
                                 <ul class="languages">
                                     <li>Português (Fluente)</li>
                                     <li>Inglês (Intermediário)</li>
