add skills to data

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                                         <section class="profissional">
                                             <h4>Pessoais:</h4>
-                                            <ul>
+                                            <ul id="profile.skills.softSkills">
                                                 <li>Liderança</li>
                                                 <li>Resolução de problemas</li>
                                                 <li>Organização</li>
