--- a/index.html
+++ b/index.html
@@ -71,10 +71,7 @@
                                         <section class="profissional">
                                             <h4>Pessoais:</h4>
                                             <ul id="profile.skills.softSkills">
-                                                <li>Liderança</li>
-                                                <li>Resolução de problemas</li>
-                                                <li>Organização</li>
-                                                <li>Trabalho em equipe</li>
+                                                <li>carregando...</li>
                                             </ul>
                                         </section>
                                     </div>
