add hard skills to datas

--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
                                     <div class="skills">
                                         <section class="tools">
                                             <h4>Ferramentas:</h4>
-                                            <ul>
-                                                <li><img src="assets/img/skills/html.svg" alt="HTML 5"></li>
-                                                <li><img src="assets/img/skills/css.svg" alt="CSS 3"></li>
-                                                <li><img src="assets/img/skills/javascript.svg" alt="Javascript"></li>
+                                            <ul id="profile.skills.hardSkills">
+                                                <li><img src="assets/img/skills/html.svg" alt="a tool..."></li>
                                             </ul>
                                         </section>
 
