--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                         <section class="profissional">
                                             <h4>Pessoais:</h4>
                                             <ul id="profile.skills.softSkills">
-                                                <li>carregando...</li>
+                                                <li>Loading...</li>
                                             </ul>
                                         </section>
                                     </div>
@@ -84,8 +84,7 @@
                             <div class="description">
                                 <h3>Idiomas</h3>
                                 <ul class="languages" id="languages">
-                                    <li>Português (Fluente)</li>
-                                    <li>Inglês (Intermediário)</li>
+                                    <li>Loading...</li>
                                 </ul>
                                 <p></p>
                             </div>
