--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
                                     alt="Animal duvidoso do Github"></div>
                             <div class="description">
                                 <h3>Portfólio</h3>
-                                <ul class="portfolio">
-                                    <li>
-                                        <span class="title github">Pokedex</span>
-                                        <a href="https://github.com/Matheus-D-R-Costa/Pokedex" target="_blank">https://github.com/Matheus-D-R-Costa/Pokedex</a>
-                                    </li>
+                                <ul class="portfolio" id="profile.portfolio">
                                 </ul>
                                 <p></p>
                             </div>
